--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,8 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
   padding: 20px;
-  width: 450px;
+  min-width: 450px;
+  max-width: 800px;
   text-align: center;
 }
 
