--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-body {
+.pink {
   background: hsla(300, 100%, 97%, 1);
 
   background: linear-gradient(
@@ -20,6 +20,54 @@ body {
   );
 
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FFF2FF", endColorstr="#FC78DB", GradientType=1 );
+}
+
+.blue {
+  background: hsla(192, 100%, 87%, 1);
+
+  background: linear-gradient(
+    135deg,
+    hsla(192, 100%, 87%, 1) 0%,
+    hsla(226, 100%, 65%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    135deg,
+    hsla(192, 100%, 87%, 1) 0%,
+    hsla(226, 100%, 65%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    135deg,
+    hsla(192, 100%, 87%, 1) 0%,
+    hsla(226, 100%, 65%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#BBF1FF", endColorstr="#4F78FF", GradientType=1 );
+}
+
+.green {
+  background: hsla(127, 100%, 95%, 1);
+
+  background: linear-gradient(
+    135deg,
+    hsla(127, 100%, 95%, 1) 0%,
+    hsla(153, 79%, 47%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    135deg,
+    hsla(127, 100%, 95%, 1) 0%,
+    hsla(153, 79%, 47%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    135deg,
+    hsla(127, 100%, 95%, 1) 0%,
+    hsla(153, 79%, 47%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#E4FFE7", endColorstr="#19D580", GradientType=1 );
 }
 
 .center-content {
